Fixed "gate beautiful" => "Gate Beautiful" Also added a note, explaining that I originally found this error 12 years ago

--- a/tex/p125.tex
+++ b/tex/p125.tex
@@ -18,7 +18,7 @@
 \vs p125 1:2 But most of all was his sense of propriety outraged by the sight of the frivolous courtesans parading about within this precinct of the temple, just such painted women as he had so recently seen when on a visit to Sepphoris. This profanation of the temple fully aroused all his youthful indignation, and he did not hesitate to express himself freely to Joseph.
 \vs p125 1:3 Jesus admired the sentiment and service of the temple, but he was shocked by the spiritual ugliness which he beheld on the faces of so many of the unthinking worshippers.
 \vs p125 1:4 They now passed down to the priests’ court beneath the rock ledge in front of the temple, where the altar stood, to observe the killing of the droves of animals and the washing away of the blood from the hands of the officiating slaughter priests at the bronze fountain. The bloodstained pavement, the gory hands of the priests, and the sounds of the dying animals were more than this nature\hyp{}loving lad could stand. The terrible sight sickened this boy of Nazareth; he clutched his father’s arm and begged to be taken away. They walked back through the court of the gentiles, and even the coarse laughter and profane jesting which he there heard were a relief from the sights he had just beheld.
-\vs p125 1:5 Joseph saw how his son had sickened at the sight of the temple rites and wisely led him around to view the “gate beautiful,” the artistic gate made of Corinthian bronze. But Jesus had had enough for his first visit at the temple. They returned to the upper court for Mary and walked about in the open air and away from the crowds for an hour, viewing the Asmonean palace, the stately home of Herod, and the tower of the Roman guards. During this stroll Joseph explained to Jesus that only the inhabitants of Jerusalem were permitted to witness the daily sacrifices in the temple, and that the dwellers in Galilee came up only three times a year to participate in the temple worship: at the Passover, at the feast of Pentecost (seven weeks after Passover), and at the feast of tabernacles in October. These feasts were established by Moses. They then discussed the two later established feasts of the dedication and of Purim. Afterwards they went to their lodgings and made ready for the celebration of the Passover.
+\vs p125 1:5 Joseph saw how his son had sickened at the sight of the temple rites and wisely led him around to view the “Gate Beautiful,”\fnst{This proper name of the gate (known from the Bible) was printed in the 1955 text in the lower case as ``gate beautiful'', see also \bibref[162:4.3]{p162 4:3}. I have pointed this out to the Urantia Book Fellowship and Urantia Foundation on 20\ts{th} May 2010 (it was in fact my very first contact with what I then naively supposed to be ``the guardian of the Revelation'' and they have fixed their texts, but I forgot to do the same when I published \bibemph{The British Study Edition of the Urantia Papers} a year later.} the artistic gate made of Corinthian bronze. But Jesus had had enough for his first visit at the temple. They returned to the upper court for Mary and walked about in the open air and away from the crowds for an hour, viewing the Asmonean palace, the stately home of Herod, and the tower of the Roman guards. During this stroll Joseph explained to Jesus that only the inhabitants of Jerusalem were permitted to witness the daily sacrifices in the temple, and that the dwellers in Galilee came up only three times a year to participate in the temple worship: at the Passover, at the feast of Pentecost (seven weeks after Passover), and at the feast of tabernacles in October. These feasts were established by Moses. They then discussed the two later established feasts of the dedication and of Purim. Afterwards they went to their lodgings and made ready for the celebration of the Passover.
 \usection{Jesus and the Passover}
 \vs p125 2:1 Five Nazareth families were guests of, or associates with, the family of Simon of Bethany in the celebration of the Passover, Simon having purchased the paschal lamb for the company. It was the slaughter of these lambs in such enormous numbers that had so affected Jesus on his temple visit. It had been the plan to eat the Passover with Mary’s relatives, but Jesus persuaded his parents to accept the invitation to go to Bethany.
 \vs p125 2:2 That night they assembled for the Passover rites, eating the roasted flesh with unleavened bread and bitter herbs. Jesus, being a new son of the covenant, was asked to recount the origin of the Passover, and this he well did, but he somewhat disconcerted his parents by the inclusion of numerous remarks mildly reflecting the impressions made on his youthful but thoughtful mind by the things which he had so recently seen and heard. This was the beginning of the seven\hyp{}day ceremonies of the feast of the Passover.
