--- a/tex/p162.tex
+++ b/tex/p162.tex
@@ -45,7 +45,7 @@
 \usection{The Feast of Tabernacles}
 \vs p162 4:1 The presence of people from all of the known world, from Spain to India, made the feast of tabernacles an ideal occasion for Jesus for the first time publicly to proclaim his full gospel in Jerusalem. At this feast the people lived much in the open air, in leafy booths. It was the feast of the harvest ingathering, and coming, as it did, in the cool of the autumn months, it was more generally attended by the Jews of the world than was the Passover at the end of the winter or Pentecost at the beginning of summer. The apostles at last beheld their Master making the bold announcement of his mission on earth before all the world, as it were.
 \vs p162 4:2 This was the feast of feasts, since any sacrifice not made at the other festivals could be made at this time. This was the occasion of the reception of the temple offerings; it was a combination of vacation pleasures with the solemn rites of religious worship. Here was a time of racial rejoicing, mingled with sacrifices, Levitical chants, and the solemn blasts of the silvery trumpets of the priests. At night the impressive spectacle of the temple and its pilgrim throngs was brilliantly illuminated by the great candelabras which burned brightly in the court of the women as well as by the glare of scores of torches standing about the temple courts. The entire city was gaily decorated except the Roman castle of Antonia, which looked down in grim contrast upon this festive and worshipful scene. And how the Jews did hate this ever\hyp{}present reminder of the Roman yoke!
-\vs p162 4:3 Seventy bullocks were sacrificed during the feast, the symbol of the seventy nations of heathendom. The ceremony of the outpouring of the water symbolized the outpouring of the divine spirit. This ceremony of the water followed the sunrise procession of the priests and Levites. The worshippers passed down the steps leading from the court of Israel to the court of the women while successive blasts were blown upon the silvery trumpets. And then the faithful marched on toward the beautiful gate, which opened upon the court of the gentiles. Here they turned about to face westward, to repeat their chants, and to continue their march for the symbolic water.
+\vs p162 4:3 Seventy bullocks were sacrificed during the feast, the symbol of the seventy nations of heathendom. The ceremony of the outpouring of the water symbolized the outpouring of the divine spirit. This ceremony of the water followed the sunrise procession of the priests and Levites. The worshippers passed down the steps leading from the court of Israel to the court of the women while successive blasts were blown upon the silvery trumpets. And then the faithful marched on toward the Beautiful Gate\fnst{In the 1955 text in lower case ``beautiful gate'', see the note at \bibref[125:1.5]{p125 1:5}.}, which opened upon the court of the gentiles. Here they turned about to face westward, to repeat their chants, and to continue their march for the symbolic water.
 \vs p162 4:4 \pc On the last day of the feast almost 450 priests with a corresponding number of Levites officiated. At daybreak the pilgrims assembled from all parts of the city, each carrying in the right hand a sheaf of myrtle, willow, and palm branches, while in the left hand each one carried a branch of the paradise apple --- the citron, or the “forbidden fruit.” These pilgrims divided into three groups for this early morning ceremony. One band remained at the temple to attend the morning sacrifices; another group marched down below Jerusalem to near Maza to cut the willow branches for the adornment of the sacrificial altar, while the third group formed a procession to march from the temple behind the water priest, who, to the sound of the silvery trumpets, bore the golden pitcher which was to contain the symbolic water, out through Ophel to near Siloam, where was located the fountain gate. After the golden pitcher had been filled at the pool of Siloam, the procession marched back to the temple, entering by way of the water gate and going directly to the court of the priests, where the priest bearing the water pitcher was joined by the priest bearing the wine for the drink offering. These two priests then repaired to the silver funnels leading to the base of the altar and poured the contents of the pitchers therein. The execution of this rite of pouring the wine and the water was the signal for the assembled pilgrims to begin the chanting of the Psalms from 113 to 118 inclusive, in alternation with the Levites. And as they repeated these lines, they would wave their sheaves at the altar. Then followed the sacrifices for the day, associated with the repeating of the Psalm for the day, the Psalm for the last day of the feast being the 82\ts{nd}, beginning with the 5\ts{th} verse.
 \usection{Sermon on the Light of the World}
 \vs p162 5:1 On the evening of the next to the last day of the feast, when the scene was brilliantly illuminated by the lights of the candelabras and the torches, Jesus stood up in the midst of the assembled throng and said:
