--- a/tex/p103.tex
+++ b/tex/p103.tex
@@ -97,7 +97,7 @@
 \vs p103 8:3 A good and noble man may be consummately in love with his wife but utterly unable to pass a satisfactory written examination on the psychology of marital love. Another man, having little or no love for his spouse, might pass such an examination most acceptably. The imperfection of the lover’s insight into the true nature of the beloved does not in the least invalidate either the reality or sincerity of his love.
 \vs p103 8:4 \pc If you truly believe in God --- by faith know him and love him --- do not permit the reality of such an experience to be in any way lessened or detracted from by the doubting insinuations of science, the cavilling of logic, the postulates of philosophy, or the clever suggestions of well\hyp{}meaning souls who would create a religion without God.
 \vs p103 8:5 The certainty of the God\hyp{}knowing religionist should not be disturbed by the uncertainty of the doubting materialist; rather should the uncertainty of the unbeliever be mightily challenged by the profound faith and unshakable certainty of the experiential believer.
-\vs p103 8:6 \pc Philosophy, to be of the greatest service to both science and religion, should avoid the extremes of both materialism and pantheism. Only a philosophy which recognizes the reality of personality --- permanence in the presence of change --- can be of moral value to man, can serve as a liaison between the theories of material science and spiritual religion. Revelation is a compensation for the frailties of evolving philosophy.
+\vs p103 8:6 \pc Philosophy, to be of the greatest service to both science and religion, should avoid the extremes of both materialism and pantheism. Only a philosophy which recognizes the reality of personality --- permanence in the presence of change\fnst{This definition of personality (see \bibref[0:5.11]{p000 5:11}) comes from the book ``Slavery and Freedom'' by N.A.~Berdyaev, written in Russian in 1939. The English translation was published in 1943 (London, \cite{Berdyaev1}) and 1944 (New York, \cite{Berdyaev2}). See also \bibref[112:0.1]{p112 0:1}.} --- can be of moral value to man, can serve as a liaison between the theories of material science and spiritual religion. Revelation is a compensation for the frailties of evolving philosophy.
 \usection{The Essence of Religion}
 \vs p103 9:1 Theology deals with the intellectual content of religion, metaphysics (revelation) with the philosophic aspects. Religious experience \bibemph{is} the spiritual content of religion. Notwithstanding the mythologic vagaries and the psychologic illusions of the intellectual content of religion, the metaphysical assumptions of error and the techniques of self\hyp{}deception, the political distortions and the socio\hyp{}economic perversions of the philosophic content of religion, the spiritual experience of personal religion remains genuine and valid.
 \vs p103 9:2 Religion has to do with feeling, acting, and living, not merely with thinking. Thinking is more closely related to the material life and should be in the main, but not altogether, dominated by reason and the facts of science and, in its nonmaterial reaches toward the spirit realms, by truth. No matter how illusory and erroneous one’s theology, one’s religion may be wholly genuine and everlastingly true.
@@ -114,3 +114,15 @@
 \vsetoff
 \vs p103 9:13 [Presented by a Melchizedek of Nebadon.]
 \quizlink
+\tunemarkuptwo{nobiblio}{}{%
+\begin{thebibliography}{100}
+\bibitem{Berdyaev1}
+N.A.~Berdyaev.
+{``Slavery and Freedom.''}
+{\em London: G Bles}, 1943.
+\bibitem{Berdyaev2}
+N.A.~Berdyaev.
+{``Slavery and Freedom.''}
+{\em New York: Charles Scribner's Sons}, 1944.
+\end{thebibliography}
+}
