--- a/tex/p112.tex
+++ b/tex/p112.tex
@@ -7,7 +7,7 @@
 \uminitoc{The Morontia Self}
 \uminitoc{Adjuster Fusion}
 \author{Solitary Messenger}
-\vs p112 0:1 The evolutionary planets are the spheres of human origin, the initial worlds of the ascending mortal career. Urantia is your starting point; here you and your divine Thought Adjuster are joined in temporary union. You have been endowed with a perfect guide; therefore, if you will sincerely run the race of time and gain the final goal of faith, the reward of the ages shall be yours; you will be eternally united with your indwelling Adjuster. Then will begin your real life, the ascending life, to which your present mortal state is but the vestibule. Then will begin your exalted and progressive mission as finaliters in the eternity which stretches out before you. And throughout all of these successive ages and stages of evolutionary growth, there is one part of you that remains absolutely unaltered, and that is personality --- permanence in the presence of change.
+\vs p112 0:1 The evolutionary planets are the spheres of human origin, the initial worlds of the ascending mortal career. Urantia is your starting point; here you and your divine Thought Adjuster are joined in temporary union. You have been endowed with a perfect guide; therefore, if you will sincerely run the race of time and gain the final goal of faith, the reward of the ages shall be yours; you will be eternally united with your indwelling Adjuster. Then will begin your real life, the ascending life, to which your present mortal state is but the vestibule. Then will begin your exalted and progressive mission as finaliters in the eternity which stretches out before you. And throughout all of these successive ages and stages of evolutionary growth, there is one part of you that remains absolutely unaltered, and that is personality --- permanence in the presence of change\fnst{For the human source see the note on \bibref[103:8.6]{p103 8:6}.}.
 \vs p112 0:2 \pc While it would be presumptuous to attempt the definition of personality, it may prove helpful to recount some of the things which are known about personality:
 \vs p112 0:3 \ublistelem{1.}\bibnobreakspace Personality is that quality in reality which is bestowed by the Universal Father himself or by the Conjoint Actor, acting for the Father.
 \vs p112 0:4 \ublistelem{2.}\bibnobreakspace It may be bestowed upon any living energy system which includes mind or spirit.
