1,000,000 years => a million years

--- a/tex/p023.tex
+++ b/tex/p023.tex
@@ -33,7 +33,7 @@
 \vs p023 2:13 \ublistelem{2.}\bibnobreakspace \bibemph{Messengers of the Havona Circuits.} Throughout the ascendant career you will be vaguely, but increasingly, able to detect the presence of the Solitary Messengers, but not until you reach Havona will you recognize them unmistakably. The first of the messengers you will see face to face will be those of the Havona circuits.
 \vs p023 2:14 Solitary Messengers enjoy special relations with the natives of the Havona worlds. These messengers, who are so functionally handicapped when associating with one another, can and do have a very close and personal communion with the Havona natives. But it is quite impossible to convey to human minds the supreme satisfactions consequent upon the contact of the minds of these divinely perfect beings with the spirits of such near\hyp{}transcendent personalities.
 \vs p023 2:15 \ublistelem{3.}\bibnobreakspace \bibemph{Messengers of the Superuniverses.} The Ancients of Days, those personalities of Trinity origin who preside over the destinies of the seven superuniverses, those trios of divine power and administrative wisdom, are bountifully supplied with Solitary Messengers. It is only through this order of messengers that the triune rulers of one superuniverse can directly and personally communicate with the rulers of another. Solitary Messengers are the only available type of spirit intelligence --- aside, possibly, from the Inspired Trinity Spirits --- that can be dispatched from the headquarters of one superuniverse directly to the headquarters of another. All other personalities must make such excursions by way of Havona and the executive worlds of the Master Spirits.
-\vs p023 2:16 There are some kinds of information which cannot be obtained either by Gravity Messengers, reflectivity, or broadcast. And when the Ancients of Days would certainly know these things, they must dispatch a Solitary Messenger to the source of knowledge. Long before the presence of life on Urantia the messenger now associated with me was assigned on a mission out of Uversa to the central universe --- was absent from the roll calls of Orvonton for almost 1,000,000 years but returned in due time with the desired information.
+\vs p023 2:16 There are some kinds of information which cannot be obtained either by Gravity Messengers, reflectivity, or broadcast. And when the Ancients of Days would certainly know these things, they must dispatch a Solitary Messenger to the source of knowledge. Long before the presence of life on Urantia the messenger now associated with me was assigned on a mission out of Uversa to the central universe --- was absent from the roll calls of Orvonton for almost a million years but returned in due time with the desired information.
 \vs p023 2:17 There is no limitation upon the service of Solitary Messengers in the superuniverses; they may function as executioners of the high tribunals or as intelligence gatherers for the good of the realm. Of all the supercreations they most delight to serve in Orvonton because here the need is greatest and the opportunities for heroic effort are greatly multiplied. In the more needy realms we all enjoy the satisfaction of a more replete function.
 \vs p023 2:18 \ublistelem{4.}\bibnobreakspace \bibemph{Messengers of the Local Universes.} In the services of a local universe there is no limit upon the functioning of the Solitary Messengers. They are the faithful revealers of the motives and intent of the local universe Mother Spirit, although they are under the full jurisdiction of the reigning Master Son. And this is true of all messengers operating in a local universe, whether they are travelling out directly from universe headquarters, or whether they are acting temporarily in liaison with Constellation Fathers, System Sovereigns, or Planetary Princes. Before the concentration of all power in the hands of a Creator Son at the time of his elevation as sovereign ruler of his universe, these messengers of the local universes function under the general direction of the Ancients of Days and are immediately responsible to their resident representative, the Union of Days.
 \vs p023 2:19 \ublistelem{5.}\bibnobreakspace \bibemph{Explorers of Undirected Assignment.} When the reserve corps of the Solitary Messengers is overrecruited, there issues from one of the Seven Supreme Power Directors a call for exploration volunteers; and there is never a lack of volunteers, for they delight to be dispatched as free and untrammelled explorers, to experience the thrill of finding the organizing nucleuses of new worlds and universes.
