--- a/tex/p054.tex
+++ b/tex/p054.tex
@@ -50,7 +50,7 @@
 \vs p054 5:9 \ublistelem{8.}\bibnobreakspace The Faithful of Days on Edentia advised the Constellation Fathers to allow the rebels free course to the end that all sympathy for these evildoers should be the sooner uprooted in the hearts of every present and future citizen of Norlatiadek --- every mortal, morontia, or spirit creature.
 \vs p054 5:10 \ublistelem{9.}\bibnobreakspace On Jerusem the personal representative of the Supreme Executive of Orvonton counselled Gabriel to foster full opportunity for every living creature to mature a deliberate choice in those matters involved in the Lucifer Declaration of Liberty. The issues of rebellion having been raised, the Paradise emergency adviser of Gabriel portrayed that, if such full and free opportunity were not given all Norlatiadek creatures, then would the Paradise quarantine against all such possible half\hyp{}hearted or doubt\hyp{}stricken creatures be extended in self\hyp{}protection against the entire constellation. To keep open the Paradise doors of ascension to the beings of Norlatiadek, it was necessary to provide for the full development of rebellion and to ensure the complete determination of attitude on the part of all beings in any way concerned therewith.
 \vs p054 5:11 \ublistelem{10.}\bibnobreakspace The Divine Minister of Salvington issued as her third independent proclamation a mandate directing that nothing be done to half cure, cowardly suppress, or otherwise hide the hideous visage of rebels and rebellion. The angelic hosts were directed to work for full disclosure and unlimited opportunity for sin\hyp{}expression as the quickest technique of achieving the perfect and final cure of the plague of evil and sin.
-\vs p054 5:12 \ublistelem{11.}\bibnobreakspace An emergency council of ex\hyp{}mortals consisting of\tunemarkup{pgnexus10}{\linebreak} Mighty Messengers, glorified mortals who had had personal experience with like situations, together with their colleagues, was organized on Jerusem. They advised Gabriel that at least three times the number of beings would be led astray if arbitrary or summary methods of suppression were attempted. The entire Uversa corps of counsellors concurred in advising Gabriel to permit the rebellion to take its full and natural course, even if it should require 1,000,000 years to wind up the consequences.
+\vs p054 5:12 \ublistelem{11.}\bibnobreakspace An emergency council of ex\hyp{}mortals consisting of\tunemarkup{pgnexus10}{\linebreak} Mighty Messengers, glorified mortals who had had personal experience with like situations, together with their colleagues, was organized on Jerusem. They advised Gabriel that at least three times the number of beings would be led astray if arbitrary or summary methods of suppression were attempted. The entire Uversa corps of counsellors concurred in advising Gabriel to permit the rebellion to take its full and natural course, even if it should require a million years to wind up the consequences.
 \vs p054 5:13 \ublistelem{12.}\bibnobreakspace Time, even in a universe of time, is relative: If a Urantia mortal of average length of life should commit a crime which precipitated world\hyp{}wide pandemonium, and if he were apprehended, tried, and executed within two or three days of the commission of the crime, would it seem a long time to you? And yet that would be nearer a comparison with the length of Lucifer’s life even if his adjudication, now begun, should not be completed for 100,000 Urantia years. The relative lapse of time from the viewpoint of Uversa, where the litigation is pending, could be indicated by saying that the crime of Lucifer was being brought to trial within 2½ seconds of its commission. From the Paradise viewpoint the adjudication is simultaneous with the enactment.
 \vs p054 5:14 \pc There are an equal number of reasons for not arbitrarily stopping the Lucifer rebellion which would be partially comprehensible to you, but which I am not permitted to narrate. I may inform you that on Uversa we teach 48 reasons for permitting evil to run the full course of its own moral bankruptcy and spiritual extinction. I doubt not that there are just as many additional reasons not known to me.
 \usection{The Triumph of Love}
