--- a/tex/p057.tex
+++ b/tex/p057.tex
@@ -31,7 +31,7 @@
 \vs p057 3:5 And this is what happened in Andronover ages upon ages ago. The energy wheel grew and grew until it attained its maximum of expansion, and then, when contraction set in, it whirled on faster and faster until, eventually, the critical centrifugal stage was reached and the great breakup began.
 \vs p057 3:6 \pc \bibemph{500,000,000,000} years ago the first Andronover sun was born. This blazing streak broke away from the mother gravity grasp and tore out into space on an independent adventure in the cosmos of creation. Its orbit was determined by its path of escape. Such young suns quickly become spherical and start out on their long and eventful careers as the stars of space. Excepting terminal nebular nucleuses, the vast majority of Orvonton suns have had an analogous birth. These escaping suns pass through varied periods of evolution and subsequent universe service.
 \vs p057 3:7 \pc \bibemph{400,000,000,000} years ago began the recaptive period of the Andronover nebula. Many of the near\hyp{}by and smaller suns were recaptured as a result of the gradual enlargement and further condensation of the mother nucleus. Very soon there was inaugurated the terminal phase of nebular condensation, the period which always precedes the final segregation of these immense space aggregations of energy and matter.
-\vs p057 3:8 It was scarcely 1,000,000 years subsequent to this epoch that Michael of Nebadon, a Creator Son of Paradise, selected this disintegrating nebula as the site of his adventure in universe building. Almost immediately the architectural worlds of Salvington and the 100 constellation headquarters groups of planets were begun. It required almost 1,000,000 years to complete these clusters of specially created worlds. The local system headquarters planets were constructed over a period extending from that time to about 5,000,000,000 years ago.
+\vs p057 3:8 It was scarcely a million years subsequent to this epoch that Michael of Nebadon, a Creator Son of Paradise, selected this disintegrating nebula as the site of his adventure in universe building. Almost immediately the architectural worlds of Salvington and the 100 constellation headquarters groups of planets were begun. It required almost 1,000,000 years to complete these clusters of specially created worlds. The local system headquarters planets were constructed over a period extending from that time to about 5,000,000,000 years ago.
 \vs p057 3:9 \pc \bibemph{300,000,000,000} years ago the Andronover solar circuits were well established, and the nebular system was passing through a transient period of relative physical stability. About this time the staff of Michael arrived on Salvington, and the Uversa government of Orvonton extended physical recognition to the local universe of Nebadon.
 \vs p057 3:10 \pc \bibemph{200,000,000,000} years ago witnessed the progression of contraction and condensation with enormous heat generation in the Andronover central cluster, or nuclear mass. Relative space appeared even in the regions near the central mother\hyp{}sun wheel. The outer regions were becoming more stabilized and better organized; some planets revolving around the newborn suns had cooled sufficiently to be suitable for life implantation. The oldest inhabited planets of Nebadon date from these times.
 \vs p057 3:11 Now the completed universe mechanism of Nebadon first begins to function, and Michael’s creation is registered on Uversa as a universe of inhabitation and progressive mortal ascension.
