--- a/tex/p081.tex
+++ b/tex/p081.tex
@@ -7,7 +7,7 @@
 \uminitoc{The Maintenance of Civilization}
 \author{Archangel}
 \vs p081 0:1 Regardless of the ups and downs of the miscarriage of the plans for world betterment projected in the missions of Caligastia and Adam, the basic organic evolution of the human species continued to carry the races forward in the scale of human progress and racial development. Evolution can be delayed but it cannot be stopped.
-\vs p081 0:2 The influence of the violet race, though in numbers smaller than had been planned, produced an advance in civilization which, since the days of Adam, has far exceeded the progress of mankind throughout its entire previous existence of almost 1,000,000 years.
+\vs p081 0:2 The influence of the violet race, though in numbers smaller than had been planned, produced an advance in civilization which, since the days of Adam, has far exceeded the progress of mankind throughout its entire previous existence of almost a million years.
 \usection{The Cradle of Civilization}
 \vs p081 1:1 For about 35,000 years after the days of Adam, the cradle of civilization was in south\hyp{}western Asia, extending from the Nile valley eastward and slightly to the north across northern Arabia, through Mesopotamia, and on into Turkestan. And \bibemph{climate} was the decisive factor in the establishment of civilization in that area.
 \vs p081 1:2 It was the great climatic and geologic changes in northern Africa and western Asia that terminated the early migrations of the Adamites, barring them from Europe by the expanded Mediterranean and diverting the stream of migration north and east into Turkestan. By the time of the completion of these land elevations and associated climatic changes, about 15,000\,B.C., civilization had settled down to a world\hyp{}wide stalemate except for the cultural ferments and biologic reserves of the Andites still confined by mountains to the east in Asia and by the expanding forests in Europe to the west.
