--- a/tex/p084.tex
+++ b/tex/p084.tex
@@ -112,7 +112,7 @@
 \vs p084 8:2 Originally, property was the basic institution of self\hyp{}maintenance, while marriage functioned as the unique institution of self\hyp{}perpetuation. Although food satisfaction, play, and humour, along with periodic sex indulgence, were means of self\hyp{}gratification, it remains a fact that the evolving mores have failed to build any distinct institution of self\hyp{}gratification. And it is due to this failure to evolve specialized techniques of pleasurable enjoyment that all human institutions are so completely shot through with this pleasure pursuit. Property accumulation is becoming an instrument for augmenting all forms of self\hyp{}gratification, while marriage is often viewed only as a means of pleasure. And this overindulgence, this widely spread pleasure mania, now constitutes the greatest threat that has ever been leveled at the social evolutionary institution of family life, the home.
 \vs p084 8:3 The violet race introduced a new and only imperfectly realized characteristic into the experience of humankind --- the play instinct coupled with the sense of humour. It was there in measure in the Sangiks and Andonites, but the Adamic strain elevated this primitive propensity into the \bibemph{potential of pleasure,} a new and glorified form of self\hyp{}gratification. The basic type of self\hyp{}gratification, aside from appeasing hunger, is sex gratification, and this form of sensual pleasure was enormously heightened by the blending of the Sangiks and the Andites.
 \vs p084 8:4 There is real danger in the combination of restlessness, curiosity, adventure, and pleasure\hyp{}abandon characteristic of the post\hyp{}Andite races. The hunger of the soul cannot be satisfied with physical pleasures; the love of home and children is not augmented by the unwise pursuit of pleasure. Though you exhaust the resources of art, colour, sound, rhythm, music, and adornment of person, you cannot hope thereby to elevate the soul or to nourish the spirit. Vanity and fashion cannot minister to home building and child culture; pride and rivalry are powerless to enhance the survival qualities of succeeding generations.
-\vs p084 8:5 Advancing celestial beings all enjoy rest and the ministry of the reversion directors. All efforts to obtain wholesome diversion and to engage in uplifting play are sound; refreshing sleep, rest, recreation, and all pastimes which prevent the boredom of monotony are worth while. Competitive games, storytelling, and even the taste of good food may serve as forms of self\hyp{}gratification. (When you use salt to savour food, pause to consider that, for almost 1,000,000 years, man could obtain salt only by dipping his food in ashes.)
+\vs p084 8:5 Advancing celestial beings all enjoy rest and the ministry of the reversion directors. All efforts to obtain wholesome diversion and to engage in uplifting play are sound; refreshing sleep, rest, recreation, and all pastimes which prevent the boredom of monotony are worth while. Competitive games, storytelling, and even the taste of good food may serve as forms of self\hyp{}gratification. (When you use salt to savour food, pause to consider that, for almost a million years, man could obtain salt only by dipping his food in ashes.)
 \vs p084 8:6 \pc Let man enjoy himself; let the human race find pleasure in a thousand and one ways; let evolutionary mankind explore all forms of legitimate self\hyp{}gratification, the fruits of the long upward biologic struggle. Man has well earned some of his present\hyp{}day joys and pleasures. But look you well to the goal of destiny! Pleasures are indeed suicidal if they succeed in destroying property, which has become the institution of self\hyp{}maintenance; and self\hyp{}gratifications have indeed cost a fatal price if they bring about the collapse of marriage, the decadence of family life, and the destruction of the home --- man’s supreme evolutionary acquirement and civilization’s only hope of survival.
 \vsetoff
 \vs p084 8:7 [Presented by the Chief of Seraphim stationed on Urantia.]
