--- a/tex/paper-titles.tex
+++ b/tex/paper-titles.tex
@@ -32,8 +32,8 @@
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{18}{The Supreme Trinity Personalities}{Divine Counsellor}{p18}
-\upapertitle{19}{The Co-ordinate Trinity-Origin Beings}{Divine Counsellor}{p19}
 \tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{19}{The Co-ordinate Trinity-Origin Beings}{Divine Counsellor}{p19}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{20}{The Paradise Sons of God}{Perfector of Wisdom}{p20}
 \upapertitle{21}{The Paradise Creator Sons}{Perfector of Wisdom}{p21}
@@ -42,9 +42,9 @@
 \upapertitle{24}{Higher Personalities of the Infinite Spirit}{Divine Counsellor}{p24}
 \tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{25}{The Messenger Hosts of Space}{One High in Authority}{p25}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{26}{Ministering Spirits of the Central Universe}{Perfector of Wisdom}{p26}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{27}{Ministry of the Primary Supernaphim}{Perfector of Wisdom}{p27}
 \upapertitle{28}{Ministering Spirits of the Superuniverses}{Mighty Messenger}{p28}
 \upapertitle{29}{The Universe Power Directors}{Universal Censor}{p29}
@@ -59,11 +59,11 @@
 \tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{35}{The Local Universe Sons of God}{Chief of Archangels}{p35}
 \upapertitle{36}{The Life Carriers}{Vorondadek Son}{p36}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{37}{Personalities of the Local Universe}{Brilliant Evening Star}{p37}
 \upapertitle{38}{Ministering Spirits of the Local Universe}{Melchizedek}{p38}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{39}{The Seraphic Hosts}{Melchizedek}{p39}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{40}{The Ascending Sons of God}{Mighty Messenger}{p40}
 \upapertitle{41}{Physical Aspects of the Local Universe}{Archangel}{p41}
 \upapertitle{42}{Energy — Mind and Matter}{Mighty Messenger}{p42}
@@ -78,20 +78,20 @@
 \upapertitle{50}{The Planetary Princes}{Secondary Lanonandek}{p50}
 \upapertitle{51}{The Planetary Adams}{Secondary Lanonandek}{p51}
 \upapertitle{52}{Planetary Mortal Epochs}{Mighty Messenger}{p52}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{53}{The Lucifer Rebellion}{Manovandet Melchizedek}{p53}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{54}{Problems of the Lucifer Rebellion}{Mighty Messenger}{p54}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{55}{The Spheres of Light and Life}{Mighty Messenger}{p55}
 \tunemarkup{pgkobomini}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{56}{Universal Unity}{\parbox[t]{0.3\linewidth}{Mighty Messenger and Machiventa Melchizedek}}{p56}
 \upartheader{3}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{57}{The Origin of Urantia}{Life Carrier}{p57}
 \upapertitle{58}{Life Establishment on Urantia}{Life Carrier}{p58}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{59}{The Marine-Life Era on Urantia}{Life Carrier}{p59}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{60}{Urantia During the Early Land-Life Era}{Life Carrier}{p60}
 \upapertitle{61}{The Mammalian Era on Urantia}{Life Carrier}{p61}
 \upapertitle{62}{The Dawn Races of Early Man}{Life Carrier}{p62}
@@ -114,13 +114,13 @@
 \upapertitle{75}{The Default of Adam and Eve}{Solonia}{p75}
 \upapertitle{76}{The Second Garden}{Solonia}{p76}
 \upapertitle{77}{The Midway Creatures}{Archangel}{p77}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{78}{The Violet Race after the Days of Adam}{Archangel}{p78}
 \upapertitle{79}{Andite Expansion in the Orient}{Archangel}{p79}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{80}{Andite Expansion in the Occident}{Archangel}{p80}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{81}{Development of Modern Civilization}{Archangel}{p81}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{82}{The Evolution of Marriage}{Chief of Seraphim}{p82}
 \upapertitle{83}{The Marriage Institution}{Chief of Seraphim}{p83}
@@ -146,12 +146,12 @@
 \upapertitle{97}{Evolution of the God Concept among the Hebrews}{Melchizedek}{p97}
 \upapertitle{98}{The Melchizedek Teachings in the Occident}{Melchizedek}{p98}
 \upapertitle{99}{The Social Problems of Religion}{Melchizedek}{p99}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{100}{Religion in Human Experience}{Melchizedek}{p100}
 \upapertitle{101}{The Real Nature of Religion}{Melchizedek}{p101}
 \tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{102}{The Foundations of Religious Faith}{Melchizedek}{p102}
 \upapertitle{103}{The Reality of Religious Experience}{Melchizedek}{p103}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{104}{Growth of the Trinity Concept}{Melchizedek}{p104}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{105}{Deity and Reality}{Melchizedek}{p105}
@@ -159,9 +159,9 @@
 \upapertitle{107}{Origin and Nature of Thought Adjusters}{Solitary Messenger}{p107}
 \upapertitle{108}{Mission and Ministry of Thought Adjusters}{Solitary Messenger}{p108}
 \upapertitle{109}{Relation of Adjusters to Universe Creatures}{Solitary Messenger}{p109}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{110}{Relation of Adjusters to Individual Mortals}{Solitary Messenger}{p110}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{111}{The Adjuster and the Soul}{Solitary Messenger}{p111}
 \upapertitle{112}{Personality Survival}{Solitary Messenger}{p112}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
@@ -173,12 +173,13 @@
 \upapertitle{117}{God the Supreme}{Mighty Messenger}{p117}
 \upapertitle{118}{Supreme and Ultimate — Time and Space}{Mighty Messenger}{p118}
 \upapertitle{119}{The Bestowals of Christ Michael}{Chief of Evening Stars}{p119}
+\tunemarkup{pghanlin}{\newpage}
 \upartheader{4}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{120}{The Bestowal of Michael on Urantia}{Mantutia Melchizedek}{p120}
 \upapertitle{121}{The Times of Michael’s Bestowal}{Midwayer Commission}{p121}
 \upapertitle{122}{Birth and Infancy of Jesus}{Midwayer Commission}{p122}
 \upapertitle{123}{The Early Childhood of Jesus}{Midwayer Commission}{p123}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{124}{The Later Childhood of Jesus}{Midwayer Commission}{p124}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{125}{Jesus at Jerusalem}{Midwayer Commission}{p125}
@@ -198,18 +199,18 @@
 \upapertitle{134}{The Transition Years}{Midwayer Commission}{p134}
 \upapertitle{135}{John the Baptist}{Midwayer Commission}{p135}
 \upapertitle{136}{Baptism and the Forty Days}{Midwayer Commission}{p136}
+\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{137}{Tarrying Time in Galilee}{Midwayer Commission}{p137}
 \tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
-\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{138}{Training the Kingdom’s Messengers}{Midwayer Commission}{p138}
 \upapertitle{139}{The Twelve Apostles}{Midwayer Commission}{p139}
 \upapertitle{140}{The Ordination of the Twelve}{Midwayer Commission}{p140}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{141}{Beginning the Public Work}{Midwayer Commission}{p141}
 \upapertitle{142}{The Passover at Jerusalem}{Midwayer Commission}{p142}
 \upapertitle{143}{Going Through Samaria}{Midwayer Commission}{p143}
 \upapertitle{144}{At Gilboa and in the Decapolis}{Midwayer Commission}{p144}
 \upapertitle{145}{Four Eventful Days at Capernaum}{Midwayer Commission}{p145}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{146}{First Preaching Tour of Galilee}{Midwayer Commission}{p146}
 \upapertitle{147}{The Interlude Visit to Jerusalem}{Midwayer Commission}{p147}
 \tunemarkup{pgauraone}{\upapertitleheader{Paper}{Author}{Page}}
@@ -232,15 +233,15 @@
 \upapertitle{161}{Further Discussions with Rodan}{Midwayer Commission}{p161}
 \upapertitle{162}{At the Feast of Tabernacles}{Midwayer Commission}{p162}
 \ifmultivol\tunemarkup{pgcrownq}{\upapertitleheader{Paper}{Author}{Page}}\fi
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{163}{Ordination of the Seventy at Magadan}{Midwayer Commission}{p163}
 \upapertitle{164}{At the Feast of Dedication}{Midwayer Commission}{p164}
 \ifmultivol\tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}\fi
 \upapertitle{165}{The Perean Mission Begins}{Midwayer Commission}{p165}
 \upapertitle{166}{Last Visit to Northern Perea}{Midwayer Commission}{p166}
-\upapertitle{167}{The Visit to Philadelphia}{Midwayer Commission}{p167}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
-\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \tunemarkup{pgafour}{\upapertitleheader{Paper}{Author}{Page}}
+\upapertitle{167}{The Visit to Philadelphia}{Midwayer Commission}{p167}
+\tunemarkup{pgkindledx}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{168}{The Resurrection of Lazarus}{Midwayer Commission}{p168}
 \upapertitle{169}{Last Teaching at Pella}{Midwayer Commission}{p169}
 \upapertitle{170}{The Kingdom of Heaven}{Midwayer Commission}{p170}
@@ -262,12 +263,12 @@
 \tunemarkup{pgnexus10}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{183}{The Betrayal and Arrest of Jesus}{Midwayer Commission}{p183}
 \upapertitle{184}{Before the Sanhedrin Court}{Midwayer Commission}{p184}
+\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{185}{The Trial Before Pilate}{Midwayer Commission}{p185}
 \upapertitle{186}{Just Before the Crucifixion}{Midwayer Commission}{p186}
 \upapertitle{187}{The Crucifixion}{Midwayer Commission}{p187}
 \upapertitle{188}{The Time of the Tomb}{Midwayer Commission}{p188}
 \upapertitle{189}{The Resurrection}{Midwayer Commission}{p189}
-\tunemarkup{pghanlin}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{190}{Morontia Appearances of Jesus}{Midwayer Commission}{p190}
 \tunemarkup{pgkoboaurahd}{\upapertitleheader{Paper}{Author}{Page}}
 \upapertitle{191}{Appearances to the Apostles and Other Leaders}{Midwayer Commission}{p191}
